<resources>
    <string name="app_name">Mlis</string>
    <string name="dangnhapbangtaikhoancuaban">Đăng nhập bằng tài khoản của bạn</string>
    <string name="quenmatkhau">Quên mật khẩu?</string>
    <string name="dangnhap">Đăng nhập</string>
    <string name="tennguoidunghoacemail">Tên người dùng hoặc Email</string>
    <string name="matkhau">Mật khẩu</string>
    <string name="banchuacotaikhoan">Bạn chưa có tài khoản?</string>
    <string name="dangky">Đăng ký</string>
    <string name="tennguoidung">Tên người dùng</string>
    <string name="email">Email</string>
    <string name="xacnhanmatkhau">Xác nhận mật khẩu</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="gioitinh">Giới tính</string>
    <string name="dacotaikhoan">Đã có tài khoản?</string>
    <string name="aha">aha</string>
    <string name="trolai">Trở lại</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="khac">Khác</string>
    <string name="vuilongchongioitinh">Vui lòng chọn giới tính</string>
    <string name="danhsachdaluu">Danh sách đã lưu</string>
    <string name="caidat">Cài đặt</string>
    <string name="thoat">Thoát</string>
    <string name="search">Search</string>
    <string name="trangchu">Trang chủ</string>
    <string name="phatnhac">Phát nhạc</string>
    <string name="dungnhac">Dừng nhạc</string>
    <string name="tentruyen">Tên truyện</string>
    <string name="tap1">Tập 1</string>
    <string name="phobien">Phổ biến</string>
    <string name="ngheganday">Nghe gần đây</string>
    <string name="thongtin">Thông tin</string>
    <string name="moicapnhat">Mới cập nhật</string>
    <string name="boSung">Bổ sung</string>
    <string name="hengio">Hẹn giờ</string>
    <string name="_30phut">30 phút</string>
    <string name="ok">OK</string>
    <string name="amluong">Âm lượng</string>
    <string name="xemThongTinTruyen">Thông tin truyện</string>
    <string name="themVaoDanhSach">Thêm vào danh sách</string>
    <string name="baoloi">Báo lỗi</string>
    <string name="danhsachyeuthích">Danh sách yêu thích</string>
    <string name="ipdefault">192.168.1.21</string>
    <string name="dangtaidulieu">Đang tải dữ liệu</string>
    <string name="docChuongDau">Đọc chương đầu</string>
    <string name="dangphat">Đang phát</string>
    <string name="danhsach">Danh sách</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="danhsachyeuthichcua">Danh sách yêu thích của</string>
    <string name="who">Who</string>
    <string name="binhluan">Bình luận</string>
    <string name="b_n_c_n_ng_nh_p_c_th_b_nh_lu_n">Bạn cần đăng nhập để có thể bình luận</string>
    <string name="ch_a_c_b_nh_lu_n">Chưa có bình luận</string>
    <string name="ki_m_hi_p_tu_ti_n">Kiếm hiệp - Tu tiên</string>
    <string name="truy_n_ma">Truyện ma</string>
    <string name="khampha">Khám phá</string>
    <string name="themvaodanhsachyeuthich">Thêm vào danh sách yêu thích</string>
    <string name="danhsachtrong">Danh sách trống</string>
    <string name="taikhoancuatoi">Tài khoản của tôi</string>
    <string name="doimatkhau">Đổi mật khẩu</string>
    <string name="nh_n_v_o_y_t_i_l_i_trang_ch_nh">Nhấn vào đây để tải lại trang chính</string>
    <string name="doiten">Đổi tên</string>
    <string name="xoa">Xóa</string>
    <string name="i_t_n_danh_s_ch_y_u_th_ch">Đổi tên danh sách yêu thích</string>
</resources>