<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/background_light"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/_16sdp"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_50sdp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
                android:text="@string/dangnhapbangtaikhoancuaban"
                android:textColor="@color/dark"
                android:textSize="@dimen/_16ssp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/edittext_6"
                android:drawableStart="@drawable/ic_baseline_alternate_email_24"
                android:drawablePadding="@dimen/_4sdp"
                android:drawableTint="@color/success"
                android:hint="@string/tennguoidunghoacemail"
                android:inputType="textEmailAddress"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_8sdp" />

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/edittext_6"
                android:drawableStart="@drawable/ic_baseline_lock_24"
                android:drawablePadding="@dimen/_4sdp"
                android:drawableTint="@color/success"
                android:hint="@string/matkhau"
                android:inputType="textPassword"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_8sdp" />

            <TextView
                android:id="@+id/goForgotPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_2sdp"
                android:gravity="end"
                android:text="@string/quenmatkhau"
                android:textStyle="bold" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/bt_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:text="@string/dangnhap"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/_14ssp"
                app:backgroundTint="@color/success" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/banchuacotaikhoan" />

            <TextView
                android:id="@+id/goSignUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/_3sdp"
                android:text="@string/dangky"
                android:textSize="@dimen/_13ssp" />
        </LinearLayout>
    </LinearLayout>

</layout>