<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/dark"
    android:rowCount="5"
    android:columnCount="3"
    android:orientation="vertical">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/hengio"
        android:textColor="@color/white"
        android:textSize="@dimen/_16ssp"
        android:layout_marginStart="@dimen/_12sdp"
        />
    <SeekBar
        android:id="@+id/seekTimer"
        android:layout_width="@dimen/_250sdp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:progress="30"
        android:max="180"
        android:min="0"/>
    <TextView
        android:id="@+id/timertext"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/_30phut"
        android:layout_gravity="center"
        android:textColor="@color/white"
        android:textSize="@dimen/_12ssp"/>
    <View
        android:layout_width="@dimen/_250sdp"
        android:layout_height="@dimen/_1sdp"
        android:background="@color/gray"
        android:layout_marginTop="@dimen/_4sdp"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="4">
        <Button
            android:id="@+id/btOk"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_tran"
            android:textColor="@color/normal_text"
            android:text="@string/ok"
            android:layout_weight="2"
            android:gravity="center"
            />
        <View
            android:layout_width="@dimen/_1sdp"
            android:layout_height="@dimen/_36sdp"
            android:background="@color/gray"
            android:layout_gravity="center"
            />
        <Button
            android:id="@+id/btCancel"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/button_tran"
            android:textColor="@color/normal_text"
            android:text="@string/trolai"
            android:layout_gravity="center"
            android:layout_weight="2"
            />
    </LinearLayout>

</LinearLayout>