<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.ChatActivity">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background">
        <TextView
            android:id="@+id/textbl"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/binhluan"
            android:textSize="@dimen/_16ssp"
            android:textColor="@color/normal_text"
            android:textStyle="bold"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/textbl"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintBottom_toTopOf="@id/commentBox"
            android:orientation="horizontal">
            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/rcvComment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"/>
            <TextView
                android:id="@+id/noCommentText"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:text="@string/ch_a_c_b_nh_lu_n"
                android:textSize="@dimen/_13ssp"
                android:textColor="@color/normal_text"
                android:gravity="center"/>
        </LinearLayout>
        <LinearLayout
            android:id="@+id/commentBox"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@id/noCommentBox"
            android:weightSum="1">
            <EditText
                android:id="@+id/etComment"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/edittext_6"
                android:text=""
                android:inputType="text"
                android:paddingHorizontal="@dimen/_6sdp"
                android:paddingVertical="@dimen/_8sdp"
                android:layout_margin="@dimen/_4sdp"/>
            <ImageButton
                android:id="@+id/btSendComment"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:src="@drawable/outline_send_24"
                android:background="@drawable/border12"
                android:scaleType="fitXY"
                android:padding="@dimen/_6sdp"
                android:layout_margin="@dimen/_4sdp"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/noCommentBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintBottom_toBottomOf="parent">
            <TextView
                android:id="@+id/noLoginText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/b_n_c_n_ng_nh_p_c_th_b_nh_lu_n"
                android:textColor="@color/normal_text"
                android:gravity="center"/>
            <com.google.android.material.button.MaterialButton
                android:id="@+id/goLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dangnhap"
                android:textColor="@color/normal_text"
                android:backgroundTint="@color/light_green"
                android:layout_gravity="center_horizontal"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>