<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".activities.PlayerListActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/background"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="@dimen/_4sdp">
            <ImageView
                android:id="@+id/icCancel"
                android:layout_width="@dimen/_32sdp"
                android:layout_height="@dimen/_32sdp"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:tint="@color/normal_text" />
        </LinearLayout>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:text="@string/dangphat"
            android:textColor="@color/normal_text"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:id="@+id/ivTruyen"
                android:layout_width="@dimen/_36sdp"
                android:layout_height="@dimen/_36sdp"/>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">
                <TextView
                    android:id="@+id/tvTenTruyen"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/tentruyen"
                    android:textSize="@dimen/_13ssp"
                    android:textColor="@color/normal_text"
                    android:maxLines="1"/>
                <TextView
                    android:id="@+id/tvAuthor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="\?"
                    android:textColor="@color/subtitle_text"
                    android:textSize="@dimen/_11ssp"
                    android:maxLines="1"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
            android:id="@+id/tvPlayerList"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/_12ssp"
            android:text="@string/danhsach"
            android:textColor="@color/normal_text"
            android:textStyle="bold"
            android:layout_marginTop="@dimen/_2sdp"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/lvPlayerList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>

</layout>